[project]
name = "311servicerequest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-snowflake>=1.10.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.12",
    "sodapy>=2.2.0",
    "sqlalchemy>=2.0.44",
]
